# cheer_up

./: .gitignore  app.py  pyproject.toml  readme.md  yolo.ipynb
models/: bbos_utils.ipynb  classifier.ipynb
models/tests/: test_bbox.py
models/utils/: __init__.py  bbox.py  download.py
models/vision/: face_detection.ipynb
static/: index.html
static/css/: style.css
static/js/: script.js
