[tool.poetry]
name = "cheer-up"
version = "0.1.0"
description = ""
authors = ["'Yubo-Cao' <'cao2006721@gmail.com'>"]
readme = "README.md"
packages = [{include = "cheer_up"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
